# sioscgi

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg
src/: sioscgi.py
src/sioscgi/: __init__.py  request.py  response.py
tests/: __init__.py  test_request.py  test_response.py  test_sioscgi.py
