[build-system]
requires = [
	"setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
enable = [
	"deprecated-pragma",
	"useless-suppression",
	"use-symbolic-message-instead",
]

disable = [
	"line-too-long",
	"no-else-raise",
	"no-else-return",
	"too-few-public-methods",
	"too-many-branches",
	"too-many-instance-attributes",
	"too-many-locals",
	"too-many-nested-blocks",
	"too-many-statements",
]

[tool.ruff]
allowed-confusables = ["’"]
ignore = [
	"C901", # complex-structure
	"COM812", # missing-trailing-comma
	"D203", # one-blank-line-before-class
	"D212", # multi-line-summary-first-line
	"PLR09", # too-many-<foo>
	"PT", # pytest-related stuff
	"S101", # assert
	"TCH003", # typing-only-standard-library-import
]
select = ["ALL"]
src = ["src"]
target-version = "py310"
