[build-system]
requires = ["setuptools >= 78.1.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
	"mypy ~= 1.3.0",
	"pylint == 2.17.1",
	"ruff ~= 0.11.2",
]

[project]
name = "sioscgi"
version = "5.0.0"
description = "A sans-I/O implementation of the SCGI specification."
readme = "README.rst"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
	{ name = "Christopher Head" },
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Repository = "https://gitlab.com/Hawk777/sioscgi.git" }

[tool.pylint.messages_control]
enable = [
	"deprecated-pragma",
	"useless-suppression",
	"use-symbolic-message-instead",
]

disable = [
	"duplicate-code",
	"line-too-long",
	"no-else-raise",
	"no-else-return",
	"too-few-public-methods",
	"too-many-branches",
	"too-many-instance-attributes",
	"too-many-locals",
	"too-many-nested-blocks",
	"too-many-statements",
]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = ["’"]
ignore = [
	"C901", # complex-structure
	"COM812", # missing-trailing-comma
	"D203", # one-blank-line-before-class
	"D212", # multi-line-summary-first-line
	"PLR09", # too-many-<foo>
	"PT", # pytest-related stuff
	"S101", # assert
	"TC003", # typing-only-standard-library-import
]
select = ["ALL"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
