[metadata]
name = sioscgi
version = 1.0.0
url = https://github.com/Hawk777/sioscgi
author = Christopher Head
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
	Topic :: Software Development :: Libraries :: Python Modules
description = A sans-I/O implementation of the SCGI specification.
long_description = file:README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = True
package_dir =
	=src
py_modules = sioscgi

[options.packages.find]
where = src

[pycodestyle]
ignore = E501
