[metadata]
name = sioscgi
version = 3.0.1
url = https://gitlab.com/Hawk777/sioscgi
author = Christopher Head
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
	Topic :: Software Development :: Libraries :: Python Modules
description = A sans-I/O implementation of the SCGI specification.
long_description = file:README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = True
python_requires = >=3.9
packages = sioscgi
package_dir =
	=src

[options.package_data]
* = py.typed

[pycodestyle]
ignore = E501
